Bug 510469 - Dolphin Search Field Obscured
Summary: Dolphin Search Field Obscured
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: unspecified
Platform: EndeavourOS Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-10 20:19 UTC by Canoe
Modified: 2026-03-14 14:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Image of Dolphin search obscured (35.56 KB, image/png)
2025-10-10 20:19 UTC, Canoe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Canoe 2025-10-10 20:19:18 UTC
Created attachment 185671 [details]
Image of Dolphin search obscured

SUMMARY
When searching using Dolphin's search bar, entering text, and pressing the down arrow causes the search field to move upwards and become obscured. 


STEPS TO REPRODUCE
1. Open Dolphin
2. Click search, or press Ctrl+F
3. Enter text, and then press the down arrow key

OBSERVED RESULT
The search field is obscured by the upper window decoration.

EXPECTED RESULT
The search field should remain where it is. 

SOFTWARE/OS VERSIONS

Operating System: EndeavourOS 
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.10.0
Kernel Version: 6.17.1-arch1-1 (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION:
This is not a dupe of https://bugs.kde.org/show_bug.cgi?id=442427
Comment 1 uncognic 2025-10-11 02:10:04 UTC
Can reproduce on openSUSE Tumbleweed, Plasma 6.4.5, Qt 6.9.2
Comment 2 ulterno 2025-12-13 15:20:30 UTC
Can confirm.

Also, if you click on the partially visible text field again and then click the down arrow, it causes the thing to move further upward. Alternatively, you can also press the up arrow and it will come back down to its expected position.
Comment 3 Bug Janitor Service 2026-03-13 09:20:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1212
Comment 4 Méven 2026-03-14 14:02:23 UTC
Git commit cde91dd71a89d1f82bc87dabe95643cc93853e50 by Méven Car, on behalf of Pan Zhang.
Committed on 14/03/2026 at 13:37.
Pushed by meven into branch 'master'.

animatedheightwidget: prevent viewport scrolling

The search field moves upwards and becomes obscured when pressing navigation keys like the down arrow. This happens because the underlying QScrollArea processes keyboard navigation events, shifting the visible viewport even when scrollbars are completely hidden and disabled.

Move the event filter from the contents container directly to the QScrollArea (m_contentsContainerParent) and its viewport. Update the filter to intercept Qt::Key_Up and Qt::Key_Down events, preventing the scroll area from handling these inputs.

M  +16   -4    src/animatedheightwidget.cpp
M  +3    -2    src/animatedheightwidget.h

https://invent.kde.org/system/dolphin/-/commit/cde91dd71a89d1f82bc87dabe95643cc93853e50